Ran checkstyle on all classes and resolved warnings.